--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                 <ul class="site-nav__list list">
                     <li class="site-nav__item"><a href="./index.html" class="link">Студія</a></li>
                     <li class="site-nav__item"><a href="./portfolio.html"
-                            class="link site-nav__link--currrent">Портфоліо</a></li>
+                            class="link site-nav__link--current">Портфоліо</a></li>
                     <li class="site-nav__item"><a href="#" class="link">Контакти</a></li>
                 </ul>
             </nav>
