--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
     <main>
         <!--Герой-->
         <section class="hero-section section">
-            <div class="container">
+            <div class="container hero-section__container">
                 <h1 class="hero-section__title">Ефективні рішення для <br> вашого бізнесу</h1>
                 <button data-modal-open type="button" class="button hero-section__button">Замовити послугу</button>
             </div>
         </section>
         <!--Особливості-->
         <section class="features-section">
-            <div class="container">
+            <div class="container features-section__container">
                 <h2 class="visually-hidden">Особливості</h2>
                 <ul class="features__list list">
                     <li class="features__item">
@@ -105,7 +105,7 @@
         </section>
         <!--Види діяльності-->
         <section class="works section">
-            <div class="container">
+            <div class="container works__container ">
                 <h2 class="works__title">Чим ми займаємося</h2>
                 <ul class="works list">
                     <li class="works__item"><img src="./images/img1.jpg" alt="Веб-програмування" width="370">
@@ -128,7 +128,7 @@
         </section>
         <!--Члени команди-->
         <section class="persons section">
-            <div class="container">
+            <div class="container persons__container">
                 <h2 class="persons__title">Наша команда</h2>
                 <ul class="persons__list list">
                     <li class="persons__item">
@@ -224,7 +224,7 @@
 
         </section>
         <section class="clients section">
-            <div class="container">
+            <div class="container clients__container">
                 <h2 class="clients__heading">Постійні клієнти</h2>
                 <ul class="clients__list list">
                     <li class="clients__item"><a href="" class="clients__link"><svg class="clients__icon" width="106"
@@ -258,7 +258,7 @@
     </main>
     <!-- Футер сайту -->
     <footer class="page-footer section">
-        <div class="container">
+        <div class="container page-footer__container">
             <div class="page-footer__wrap">
                 <div class="page-footer__details">
                     <a href="./index.html" class="logo page-footer__logo"><span
