--- a/index.html
+++ b/index.html
@@ -25,20 +25,22 @@
                 <ul class="site-nav__list list">
                     <li class="site-nav__item"><a href="./index.html" class="link site-nav__link--current">Студія</a>
                     </li>
-                    <li class="site-nav__item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
-                    <li class="site-nav__item"><a href="#" class="link">Контакти</a></li>
+                    <li class="site-nav__item"><a href="./portfolio.html" class="link site-nav__link">Портфоліо</a></li>
+                    <li class="site-nav__item"><a href="#" class="link site-nav__link">Контакти</a></li>
                 </ul>
             </nav>
             <!--Контакти в шапці сайту-->
-            <ul class="contacts__list list">
+            <ul class="contacts list">
                 <li class="contacts__mail">
-                    <a href="mailto:info@devstudio.com" class="link"><svg class="contacts__icon" width="20" height="20">
+                    <a href="mailto:info@devstudio.com" class="contacts__link link"><svg class="contacts__icon"
+                            width="20" height="20">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com</a>
                 </li>
                 <li class="contacts__tel">
-                    <a href="tel:+380961111111" class="link"><svg class="contacts__icon" width="20" height="20">
+                    <a href="tel:+380961111111" class=" contacts__link link"><svg class="contacts__icon" width="20"
+                            height="20">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11</a>
                 </li>
@@ -50,15 +52,15 @@
     <!--Основний контент-->
     <main>
         <!--Герой-->
-        <section class="hero-section section">
-            <div class="container hero-section__container">
-                <h1 class="hero-section__title">Ефективні рішення для <br> вашого бізнесу</h1>
-                <button data-modal-open type="button" class="button hero-section__button">Замовити послугу</button>
+        <section class="hero section">
+            <div class="container hero__container">
+                <h1 class="hero__title">Ефективні рішення для <br> вашого бізнесу</h1>
+                <button data-modal-open type="button" class="button hero__button">Замовити послугу</button>
             </div>
         </section>
         <!--Особливості-->
-        <section class="features-section">
-            <div class="container features-section__container">
+        <section class="features">
+            <div class="container features__container">
                 <h2 class="visually-hidden">Особливості</h2>
                 <ul class="features__list list">
                     <li class="features__item">
@@ -107,7 +109,7 @@
         <section class="works section">
             <div class="container works__container ">
                 <h2 class="works__title">Чим ми займаємося</h2>
-                <ul class="works list">
+                <ul class="works__list list">
                     <li class="works__item"><img src="./images/img1.jpg" alt="Веб-програмування" width="370">
                         <div class="works__name">
                             <h3 class="works__heading">Десктопні додатки</h3>
