--- a/portfolio.html
+++ b/portfolio.html
@@ -23,20 +23,20 @@
                 <a href="./index.html" class="logo site-nav__logo"><span
                         class="accent site-nav__accent">Web</span>Studio</a>
                 <ul class="site-nav__list list">
-                    <li class="site-nav__item"><a href="./index.html" class="link">Студія</a></li>
+                    <li class="site-nav__item"><a href="./index.html" class="link site-nav__link">Студія</a></li>
                     <li class="site-nav__item"><a href="./portfolio.html"
                             class="link site-nav__link--current">Портфоліо</a></li>
-                    <li class="site-nav__item"><a href="#" class="link">Контакти</a></li>
+                    <li class="site-nav__item"><a href="#" class="link site-nav__link">Контакти</a></li>
                 </ul>
             </nav>
             <!--Контакти в шапці сайту-->
-            <ul class="contacts__list list">
-                <li class="contacts__mail"><a href="mailto:info@devstudio.com" class="link"><svg class="contacts__icon"
-                            width="20" height="20">
+            <ul class="contacts list">
+                <li class="contacts__mail"><a href="mailto:info@devstudio.com" class="link contacts__link"><svg
+                            class="contacts__icon" width="20" height="20">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>info@devstudio.com</a></li>
-                <li class="contacts__tel"><a href="tel:+380961111111" class="link"><svg class="contacts__icon"
-                            width="20" height="20">
+                <li class="contacts__tel"><a href="tel:+380961111111" class="link contacts__link"><svg
+                            class="contacts__icon" width="20" height="20">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11</a></li>
             </ul>
@@ -58,7 +58,7 @@
                 </ul>
 
 
-                <ul class="portfolio list">
+                <ul class="portfolio__list list">
                     <li class="portfolio__item">
                         <a class="portfolio__link" href="">
                             <div class="portfolio__thumb">
