--- a/index.html
+++ b/index.html
@@ -275,7 +275,8 @@
                             </li>
                             <li class="page-footer__item"><a href="mailto:info@devstudio.com"
                                     class="page-footer__link">info@devstudio.com</a></li>
-                            <li class="page-footer__item"><a href="tel:+380961111111" class="page-footer__link">+38 096
+                            <li class="page-footer__item"><a href="tel:+380961111111" class="page-footer__link">+38
+                                    096
                                     111 11 11</a>
                             </li>
                         </ul>
